Bug 806643 - Negate doubles by flipping signed bit. r=sstangl